NEWS for Mercury release 0.12:
------------------------------

HIGHLIGHTS
==========

Changes to the Mercury language:
* Infix `.' is now accepted as a module name separator.

Changes to the Mercury compiler:
* Nothing yet.

Portability improvements:
* Nothing yet.

Changes to the Mercury debugger:
* Nothing yet.

Changes to the compiler back-ends:
* Nothing yet.

Numerous minor improvements to the Mercury standard library.

DETAILED LISTING
================

Changes to the Mercury language:

* Infix `.' is now accepted as a module name separator.  Hence it is
  now possible to write io.write_string and list.member to mean the
  same thing as io__write_string and list__member, for instance.  This
  has required changing the associativity of `.' from xfy to yfx and
  from precedence 600 to 10.

Changes to the Mercury standard library:

* We've added the three predicates, `is_nan/1', `is_inf/1' and
  `is_nan_or_inf/1' to float.m.  These predicates are for use only on
  systems which support IEEE floating point arithmetic.

* The determinisms of the following predicates in the `std_util'
  module have been changed from cc_nondet to cc_multi: arg_cc/3,
  argument_cc/3 and limited_deconstruct_cc/3 (formerly
  limited_deconstruct_cc/5).  The success or failure of these
  predicates is now encoded in a maybe type.

* The incorrect cc_nondet modes of the following predicates in
  the `deconstruct' module have been removed: arg/4, limited_deconstruct/6.
  cc_multi version of the predicates have been introduced where the
  success or failure of the predicate has been encoded into a maybe
  type.

Changes to the extras distribution:

* Nothing yet.

Changes to the Mercury compiler:

* Nothing yet.

Portability improvements:

* Nothing yet.

Changes to the Mercury debugger:

* Nothing yet.

Changes to the compiler back-ends:

* Nothing yet.


NEWS for Mercury 0.11
---------------------

HIGHLIGHTS
==========

Changes to the Mercury language: