@@ -50,6 +50,7 @@ ORDINARY_PROGS=	\
 	export_test \
 	factt \
 	failure_unify \
+	field_syntax \
 	float_consistency \
 	float_field \
 	float_map \
