@@ -6,6 +6,9 @@ HIGHLIGHTS
 
 Changes to the Mercury language:
 * Infix `.' is now accepted as a module name separator.
+* Field access syntax can now be used at the top-level in func and mode
+  declarations and in the head of a clause for a user-defined field access
+  function.
 
 Changes to the Mercury compiler:
 * Nothing yet.
@@ -31,6 +34,14 @@ Changes to the Mercury language:
   same thing as io__write_string and list__member, for instance.  This
   has required changing the associativity of `.' from xfy to yfx and
   from precedence 600 to 10.
+
+* Field access notation can now be used at the top-level in func and
+  mode declarations and in the head of a clause for a user-defined
+  field access function.  That is, one can now write
+
+  	:- func a ^ f(b) = c.
+	:- mode a ^ f(b) = c is <detism>.
+	A ^ f(B) = ...
 
 Changes to the Mercury standard library:
 
